@@ -34,6 +34,7 @@
 #ifdef __MINGW32__
 # define read(f,b,s)	w32_read(f,b,s)
 # define _read(f,b,s)	w32_read(f,b,s)
+extern ssize_t w32_read (int, void *, size_t);
 #endif
 
 #if defined (HAVE_SYS_TIME_H)
